PROJECT (ANNetGPGPU) 

FIND_PACKAGE(Qt5Widgets REQUIRED)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_AUTOMOC ON)

SET( ANGUISourceFiles
  ${ANNetGPGPU_SOURCE_DIR}/QSOMReader.cpp
)

ADD_LIBRARY (SOMReader ${ANGUISourceFiles})
TARGET_LINK_LIBRARIES (SOMReader Qt5::Widgets)

ADD_SUBDIRECTORY(back_propagation)
ADD_SUBDIRECTORY(som_cpu)

IF (CUDA_FOUND)
  ADD_SUBDIRECTORY(som_gpu)
  ADD_SUBDIRECTORY(cluster_data)
ENDIF(CUDA_FOUND)
