PROJECT (Examples) 

FIND_PACKAGE(Qt5Widgets REQUIRED)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES (${Examples_SOURCE_DIR})

SET( ANGUISourceFiles
  ${Examples_SOURCE_DIR}/QSOMReader.cpp
)

ADD_LIBRARY (SOMReader ${ANGUISourceFiles})
TARGET_LINK_LIBRARIES (SOMReader Qt5::Widgets)

ADD_SUBDIRECTORY(back_propagation)
ADD_SUBDIRECTORY(som_cpu)
ADD_SUBDIRECTORY(som_cpu_custom_functor)

IF (CUDA_FOUND)
  ADD_SUBDIRECTORY(som_gpu)
  ADD_SUBDIRECTORY(som_gpu_custom_functor)
  ADD_SUBDIRECTORY(cluster_data)
ENDIF(CUDA_FOUND)
